fix(variables): remove extra padding

--- a/packages/components/ng-ovh-sidebar-menu/src/index.less
+++ b/packages/components/ng-ovh-sidebar-menu/src/index.less
@@ -70,6 +70,7 @@
     // Actions - Menu
     .responsive-popover.order-actions-menu-popover {
       margin: @sidebar-actions-menu-margin;
+      padding: @sidebar-actions-menu-padding;
       border-color: @sidebar-actions-menu-border-color;
       border-style: solid;
       border-width: @sidebar-actions-menu-border-width;
